--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <ul id="messages"></ul>
 
     <script>
-        const socket = new WebSocket('wss://your-app-name.onrender.com');
-
-
+        const socket = new WebSocket('wss://wstest-1si4.onrender.com');
 
         socket.onopen = () => {
             console.log('Connected to server');
